# PyP223

./: .gitignore  CMakeLists.txt  pyproject.toml  readme.md
demos/kernels/tempest/: LeroiAir.cfl  tempest.ipynb
demos/tempest/: LeroiAir.out  leroiair.sh  tempest.ipynb
demos/verification/vtem_max_cur/: vtem_max_cur.ipynb
demos/verification/vtem_max_mag/: LeroiAir.cfl  LeroiAir.out  vtem_max_mag.ipynb
demos/vtem_max_current_wv/: LeroiAir.cfl  LeroiAir.out  vtem_max_current_wv.ipynb
demos/vtem_max_magnetic_wv/: LeroiAir.cfl  LeroiAir.out  vtem_max_magnetic_wv.ipynb
p223/: CMakeLists.txt  clibleroiair.f90  libfranken.f90  libleroiair.f90
src/pyp223/: __init__.py  _pyp223.py
